# cuda-cudnn-tasks

./: .gitignore  CMakeLists.txt
task-01/include/: convolution.h  filter.cuh  kernels.cuh
task-01/src/: convolution.cu  main.cpp
task-02/include/: convolution.cuh  filter.cuh  launcher.cuh  pooling.cuh
task-02/src/: convolution.cu  filter.cu  main.cpp
task-03/include/: convolution.cuh  filter.cuh  image.h  launcher.cuh
task-03/src/: convolution.cu  filter.cu  image.cpp  main.cpp
task-04/include/: convolution.cuh  image.h  kernels.cuh  timecounter.cuh
task-04/src/: convolution.cu  image.cpp  main.cpp  timecounter.cu
